# main

./: .gitmodules  CLAUDE.md  LICENSE  README.md
migration/: CLAUDE.md  README.md  config.yaml  pyproject.toml
migration/.claude/agents/: dev-diary-keeper.md
migration/diary/: 2025-09-19-SCF.md
migration/src/hooting_yard_migration/: __init__.py  cli.py  config.py  keyword_analysis.py  scan_archive_dot_org_episodes.py
migration/src/hooting_yard_migration/conversion/: __init__.py  video_converter.py
migration/src/hooting_yard_migration/retrieval/: __init__.py  archive_retriever.py  client.py  downloader.py  models.py
migration/src/hooting_yard_migration/state/: __init__.py  archive_org.py  episodes.py  models.py  youtube.py
migration/src/hooting_yard_migration/state_management/: __init__.py  state_manager.py
migration/src/hooting_yard_migration/upload/: __init__.py  youtube_uploader.py
migration/src/hooting_yard_migration/utils/: logging.py
migration/state/archive_org/: index.yaml
migration/state/archive_org/2004/: hy0_hooting_yard_2004-04-14.yaml  hy0_hooting_yard_2004-04-21.yaml  hy0_hooting_yard_2004-05-05.yaml  hy0_hooting_yard_2004-05-12.yaml  hy0_hooting_yard_2004-09-08.yaml  hy0_hooting_yard_2004-09-15.yaml  hy0_hooting_yard_2004-09-30.yaml  hy0_hooting_yard_2004-10-06.yaml  hy0_hooting_yard_2004-10-20.yaml  hy0_hooting_yard_2004-11-03.yaml  hy0_hooting_yard_2004-11-10.yaml  hy0_hooting_yard_2004-11-17.yaml  hy0_hooting_yard_2004-11-24.yaml  hy0_hooting_yard_2004-12-01.yaml  hy0_hooting_yard_2004-12-15.yaml  hy0_hooting_yard_2004-12-22.yaml  hy0_hooting_yard_2004-12-29.yaml
migration/state/archive_org/2005/: hy0_hooting_yard_2005-01-05.yaml  hy0_hooting_yard_2005-01-12.yaml  hy0_hooting_yard_2005-01-19.yaml  hy0_hooting_yard_2005-01-26.yaml  hy0_hooting_yard_2005-02-02.yaml  hy0_hooting_yard_2005-02-09.yaml  hy0_hooting_yard_2005-02-16.yaml  hy0_hooting_yard_2005-02-23.yaml  hy0_hooting_yard_2005-03-09.yaml  hy0_hooting_yard_2005-03-16.yaml  hy0_hooting_yard_2005-04-13.yaml  hy0_hooting_yard_2005-04-20.yaml  hy0_hooting_yard_2005-04-27.yaml  hy0_hooting_yard_2005-05-04.yaml  hy0_hooting_yard_2005-05-11.yaml  hy0_hooting_yard_2005-05-18.yaml  (+25 more)
migration/state/keywords/: keywords.yaml
migration/tests/: integration_test_download.py  test_config.py  test_downloader.py  test_scan_archive_dot_org_episodes.py
(+81 files in other folders)
